--- a/LoRaTest.ioc
+++ b/LoRaTest.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
@@ -18,8 +19,10 @@ Mcu.Pin3=PA3
 Mcu.Pin4=PB14
 Mcu.Pin5=PB15
 Mcu.Pin6=PD8
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin7=PD9
+Mcu.Pin8=PD10
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
@@ -46,11 +49,21 @@ PB14.Mode=Asynchronous
 PB14.Signal=USART1_TX
 PB15.Mode=Asynchronous
 PB15.Signal=USART1_RX
+PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD10.GPIO_Label=loraM0usa
+PD10.GPIO_PuPd=GPIO_PULLDOWN
+PD10.Locked=true
+PD10.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD8.GPIO_Label=loraAUX
 PD8.GPIO_PuPd=GPIO_PULLDOWN
 PD8.Locked=true
 PD8.Signal=GPIO_Input
+PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD9.GPIO_Label=loraM1
+PD9.GPIO_PuPd=GPIO_PULLDOWN
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
